--- a/frontend/src/app/components/validar-rut/validar-rut.component.html
+++ b/frontend/src/app/components/validar-rut/validar-rut.component.html
@@ -26,6 +26,9 @@
           <i class="fas fa-times-circle"></i> El RUT ingresado no es válido
         </div>
       </div>
+      <div *ngIf="error" class="alert alert-danger mt-3">
+        <i class="fas fa-exclamation-circle"></i> {{ error }}
+      </div>
     </div>
   </div>
 </div>
