--- a/frontend/src/app/components/validar-rut/validar-rut.component.html
+++ b/frontend/src/app/components/validar-rut/validar-rut.component.html
@@ -23,11 +23,8 @@
           <i class="fas fa-check-circle"></i> El RUT ingresado es válido
         </div>
         <div *ngIf="!resultado.valido" class="text-danger">
-          <i class="fas fa-times-circle"></i> El RUT ingresado no es válido
+          <i class="fas fa-times-circle"></i> {{ resultado.mensaje }}
         </div>
-      </div>
-      <div *ngIf="error" class="alert alert-danger mt-3">
-        <i class="fas fa-exclamation-circle"></i> {{ error }}
       </div>
     </div>
   </div>
